<resources>
    <string name="permission_Request">Permission Request</string>
    <string name="permission_Camera_message">Your camera will be used to take a photo. Please select \'Allow\' to use Camera.</string>
    <string name="permission_Storage_message">The app will access the Phone Storage to save the taken photo.</string>
    <string name="permission_Phone_message">The app requires your phone ID (IMEI) for registration. Denying the request will prevent the app to acquire information resulting to registration failure.</string>
    <string name="request_for_approval_request">Request for Approval</string>
    <string name="dental_benefits">View Dental Benefits</string>
    <string name="hosp_not_found">Hospital not found</string>
    <string name="app_name">MACE Member</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="are_you_sure_you">Are you sure you want to submit this request?</string>
    <string name="disregard_all_changes">Are you sure you want to disregard all changes made?</string>
    <string name="action_settings">Log Out</string>
    <string name="ID_number">Username</string>
    <string name="password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="forgot_password">FORGOT YOUR PASSWORD?</string>
    <string name="SignUp">Sign Up</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registration">Registration</string>
    <string name="sample">Sample</string>
    <string name="let_coord_scan_this">Let provider/coordinator scan this QR Code to confirm your request.</string>
    <string name="add_dependency">Register Dependent</string>
    <string name="member_account">Dependent Member ID</string>
    <string name="reg_medicard_id">MediCard ID number</string>
    <string name="reg_date_of_birth">Date of Birth</string>
    <string name="reg_member_name">MediCard Member Name</string>
    <string name="reg_add_your_first">Add your first MediCard Account</string>
    <string name="reg_by_clicking_the_button">By clicking the button you are agreeing to the</string>
    <string name="reg_terms_n_conditions">Terms and Conditions</string>
    <string name="reg_button">REGISTER ACCOUNT</string>
    <string name="reg_username">Username</string>
    <string name="reg_password">Password</string>
    <string name="reg_retypepass">Re-type Password</string>
    <string name="reg_contact">Contact Number</string>
    <string name="reg_email">E-mail Address</string>
    <string name="title_activity_account_list">AccountListActivity</string>
    <string name="member_info">Member Information</string>
    <string name="plan">Plan</string>
    <string name="effective">Effectivity Date</string>
    <string name="validity">Validity Date</string>
    <string name="update">Update Date</string>
    <string name="print">Print     </string>
    <string name="sendtoEmail">Send to E-mail</string>
    <string name="consultation">Consultation</string>
    <string name="maternity">Maternity Consultation</string>
    <string name="chest_xray">Chest X-Ray</string>
    <string name="cbc">CBC</string>
    <string name="pin"> CHANGE PIN</string>
    <string name="old_pin">Old PIN</string>
    <string name="fecalysis">Fecalysis</string>
    <string name="urinalysis">Urinalysis</string>
    <string name="other_test">Other Tests</string>
    <string name="oper_room">Operating Room</string>
    <string name="in_patient">In-Patient</string>
    <string name="add_Account">Add an Account</string>
    <string name="add_AccountConfirm">Add Account</string>
    <string name="add_anotherAccount">Add another MediCard account</string>
    <string name="title_activity_account">Member Information</string>
    <string name="view_member">VIEW MEMBER INFO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="senftoEmail">Send to Email</string>
    <string name="viewDependents">Register Dependent</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="company">Company</string>
    <string name="status">Status</string>
    <string name="dependent">Dependent</string>
    <string name="principal">PRINCIPAL</string>
    <string name="age_">Age:</string>
    <string name="age">Age</string>
    <string name="civil_status">Civil Status</string>
    <string name="gender_">Gender:</string>
    <string name="gender">Gender</string>
    <string name="ref_code">Reference No.: </string>
    <string name="date_requested">Date Requested:</string>
    <string name="date_approved_">Date Approved:</string>
    <string name="account_info">Account Information</string>
    <string name="account_status">Account Status</string>
    <string name="member_code">Member Code</string>
    <string name="member_code_">Member Code:</string>
    <string name="member_type">Member Type</string>
    <string name="effective_Date">Effectivity date</string>
    <string name="validity_date">Validity Date</string>
    <string name="effective_Date_">Effectivity date:</string>
    <string name="validity_date_">Validity Date:</string>
    <string name="remarks">Remarks</string>
    <string name="remarks_">Remarks:</string>
    <string name="display_qr">Display QR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_myAccount">My Account</string>
    <string name="nav_my_loa_request">My Approval Requests</string>
    <string name="nav_dentist">Dentists</string>
    <string name="nav_hospital">Hospitals</string>
    <string name="nav_doctor">Doctors</string>
    <string name="nav_faqs">FAQs</string>
    <string name="nav_account_setting">Account Settings</string>
    <string name="title_activity_member_info">MemberInfoActivity</string>
    <string name="title_activity_qr_code">QR Code</string>
    <string name="title_activity_termNcon">Terms and Conditions</string>
    <string name="termsNcond_security_title">Security</string>
    <string name="termsNcond_security_message">By agreeing to these terms and conditions, you accept and consent to your personal data being provided to the Service for the sole purpose of requesting for Letter of Authorization (Approval). The MediCard Online Approval respects the privacy of every individual who uses this facility and MediCard website contains security measures in place to protect the loss, misuse and alteration of the information under MediCard’s control.</string>
    <string name="termsNcond_facility_title">Facility</string>
    <string name="termsNcond_facility_message">Your requested schedule, specifically, date and time are subject to availability. Notwithstanding any request confirmation, the schedule for a doctor or laboratory/diagnostic services may be subject to change without prior notification.</string>
    <string name="termsNcond_confidentiality_title">Confidentiality</string>
    <string name="termsNcond_confidentiality_message">MediCard will not sell, share, or rent your personal information to any third party or use your e-mail address for unsolicited mail. Any emails sent by MediCard will only be in connection with the provision of agreed services and products.</string>
    <string name="termsNcond_disclaimer_title">Disclaimer</string>
    <string name="termsNcon_disclaimer_msg">This site was created to provide convenience to MediCard clients. The use of this site should not be deemed to create a patient-doctor relationship nor should the information contained herein be considered as diagnosis or medical advice. MediCard has no liability for any loss, injury, or damages due to your reliance on the contents of this site. While MediCard is regularly updating the contents of this site to make sure that the information herein is accurate, MediCard cannot guarantee the completeness, accuracy or timeliness of the information due to its swift changes. </string>
    <string name="termsNcon_ammendment_title">Amendment</string>
    <string name="termsNcon_ammendment_msg">MediCard reserves the right, at its sole discretion, to modify or replace these Terms at any time. What constitutes a material change will be determined at MediCard’s sole discretion. By continuing to access or use MediCard’s service after those revisions become effective, you agree to be bound by the revised terms. If you have any questions about these Terms, please contact us at 884-9999. </string>
    <string name="title_activity_terms_ncond">Terms and Conditions</string>
    <string name="verify">VERIFY ACCOUNT</string>
    <string name="accept_terms">Agree</string>
    <string name="request_other">Request LOA of Prescribed Test or Procedure</string>
    <string name="decline_terms">Disagree</string>
    <string name="skipdiagnosis">This step is optional. You may opt to skip this \n step by tapping Skip at the upper right part of the screen</string>
    <string name="hospitalMessage">All tests that will be selected should be done in the selected Clinic/Hospital</string>
    <string name="title_activity_terms">Terms and Conditions</string>
    <string name="internal_storage">Internal storage</string>
    <string name="title_activity_member_account2">MemberAccountActivity2</string>
    <string name="upload_title">Update Photo</string>
    <string name="upload_message">Updating of photo wil requires Validation. Continue updating photo? </string>
    <string name="title_activity_request_change_password">RequestChangePassword</string>
    <string name="title_activity_splash_screen">Medicard</string>
    <string name="password_type">*NOTE: Password must contain atleast 1 upper case letter and 1 number and minimum of 8 letters.</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_request_buttons">RequestButtonsActivity</string>
    <string name="basci_text">Basic Test \n (CBC, Urinalysis, Fecalysis, Chest X-ray)</string>
    <string name="title_activity_doctor_list">DoctorListActivity</string>
    <string name="title_activity_hospital_list_acitivity">HospitalListAcitivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_dental_benefits">DentalActivity</string>
    <string name="member_name_">Member Name:</string>
    <string name="member_name">Member Name</string>
    <string name="company_name_">Company Name:</string>
    <string name="hospital_clinic">Clinic/Hospital</string>
    <string name="sort">Sort By</string>
    <string name="specialization">Specialization</string>
    <string name="doctor_family">Doctor\'s Family Name</string>
    <string name="room_number">Room</string>
    <string name="close">CLOSE</string>
    <string name="service_type">Service Type</string>
    <string name="request_date">Request Date</string>
    <string name="waiver_1">Consent is hereby given by the patient or by the next of kin (if patient cannot sign) to the disclosure and processing of the
        patient\'s medical/health information by MediCard and its representatives, it\'s Medical Service Units/Teams and
        it\'s Accredited Hospitals/Clinics which is determinative for the assessment of the treatment of his
        or her illness. MediCard and it\'s representatives are also free to disclose the said information including utilization data
        of the patient to it\'s concerned Company upon demand of the latter for such other legal purpose it may have
        including for the proper administration of the Company\'s health benefits program. MediCard and it\'s representatives,
        it\'s Medical Service Units/Teams and its Accredited Clinic/Hospitals are hereby released from liability by simple of such disclosure.
    </string>
    <string name="waiver_title">Waiver</string>
</resources>