<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_terms"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/l_gray_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.medicard.member.TermsActivity"
    tools:showIn="@layout/activity_terms" >

    <LinearLayout
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sub_margin"
            android:text="@string/termsNcond_security_title"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sub_margin"
            android:layout_marginRight="@dimen/sub_margin"
            android:text="@string/termsNcond_security_message" />

        <TextView
            android:textColor="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sub_margin"
            android:text="@string/termsNcond_facility_title"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sub_margin"
            android:layout_marginRight="@dimen/sub_margin"
            android:text="@string/termsNcond_facility_message" />


        <TextView
            android:textColor="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sub_margin"
            android:text="@string/termsNcond_confidentiality_title"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sub_margin"
            android:layout_marginRight="@dimen/sub_margin"
            android:text="@string/termsNcond_confidentiality_message" />


        <TextView
            android:textColor="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sub_margin"
            android:text="@string/termsNcond_disclaimer_title"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sub_margin"
            android:layout_marginRight="@dimen/sub_margin"
            android:text="@string/termsNcon_disclaimer_msg" />


        <TextView
            android:textColor="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sub_margin"
            android:text="@string/termsNcon_ammendment_title"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />


        <TextView
            android:layout_marginBottom="@dimen/sub_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sub_margin"
            android:layout_marginRight="@dimen/sub_margin"
            android:text="@string/termsNcon_ammendment_msg" />

        <TextView
            android:textColor="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sub_margin"
            android:text="@string/waiver_title"
            android:textSize="@dimen/text_small"
            android:textStyle="bold" />

        <TextView
            android:layout_marginBottom="@dimen/margin_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sub_margin"
            android:layout_marginRight="@dimen/sub_margin"
            android:text="@string/waiver_1" />



    </LinearLayout>


</ScrollView>
