<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <TextView
                android:layout_marginRight="@dimen/margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/title_padding"
                android:text="@string/title_activity_terms_ncond"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_small" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sub_margin"
                android:text="@string/termsNcond_security_title"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sub_margin"
                android:layout_marginRight="@dimen/sub_margin"
                android:text="@string/termsNcond_security_message" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sub_margin"
                android:text="@string/termsNcond_facility_title"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sub_margin"
                android:layout_marginRight="@dimen/sub_margin"
                android:text="@string/termsNcond_facility_message" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sub_margin"
                android:text="@string/termsNcond_confidentiality_title"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sub_margin"
                android:layout_marginRight="@dimen/sub_margin"
                android:text="@string/termsNcond_confidentiality_message" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sub_margin"
                android:text="@string/termsNcond_disclaimer_title"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sub_margin"
                android:layout_marginRight="@dimen/sub_margin"
                android:text="@string/termsNcon_disclaimer_msg" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sub_margin"
                android:text="@string/termsNcon_ammendment_title"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sub_margin"
                android:layout_marginRight="@dimen/sub_margin"
                android:text="@string/termsNcon_ammendment_msg" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mini_margin"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/accept_terms"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_small" />


                <Button
                    android:id="@+id/btn_decline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mini_margin"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/decline_terms"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_small" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>