<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/sub_margin"
    android:layout_marginTop="@dimen/sub_margin"
    android:background="#00000000"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#00000000"
        android:orientation="vertical">


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingTop="40dp">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/sort"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_main" />


        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sub_margin"
            android:gravity="center"
            android:padding="@dimen/sub_margin"
            fancy:fb_defaultColor="@color/colorPrimaryLight"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_text="@string/status"
            fancy:fb_textSize="@dimen/text_main" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/req_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sub_margin"
            android:gravity="center"
            android:padding="@dimen/sub_margin"
            fancy:fb_defaultColor="@color/colorPrimaryLight"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_text="@string/request_date"
            fancy:fb_textSize="@dimen/text_main" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/hospital_clinic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sub_margin"
            android:gravity="center"
            android:padding="@dimen/sub_margin"
            fancy:fb_defaultColor="@color/colorPrimaryLight"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_text="@string/hospital_clinic"
            fancy:fb_textSize="@dimen/text_main" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/service_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sub_margin"
            android:gravity="center"
            android:padding="@dimen/sub_margin"
            fancy:fb_defaultColor="@color/colorPrimaryLight"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_text="@string/service_type"

            fancy:fb_textSize="@dimen/text_main" />


  <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/tv_close"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/sub_margin"
            android:gravity="center"
            android:padding="@dimen/sub_margin"
            fancy:fb_defaultColor="@color/colorPrimaryLight"
            fancy:fb_focusColor="@color/colorPrimaryDark"
            fancy:fb_text="@string/close"

            fancy:fb_textSize="@dimen/text_main" />


    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingBottom="80dp"
        android:weightSum="1">

        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/ci_error_image"
            android:layout_width="@dimen/alert_circle_width"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_search_purple"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="10px" />

    </LinearLayout>

</RelativeLayout>
